# hegel-c

./: .clang-format  .gitignore  CMakeLists.txt  README.md  justfile
include/hegel/: generators.h  hegel.h  protocol.h  types.h
src/: run_test.c  runner.c  runner.h  test_case.c  test_case.h
src/generators/: collections.c  combinators.c  formats.c  generator.c  generator.h  primitives.c
src/protocol/: cbor_helpers.c  cbor_helpers.h  connection.c  connection.h  packet.c  packet.h  stream.c  stream.h
tests/: test_generators.c  test_integration.c  test_packet.c
tests/conformance/: json_helpers.c  json_helpers.h  test_binary.c  test_booleans.c  test_conformance.py  test_dicts.c  test_floats.c  test_integers.c  test_lists.c  test_oneof.c  test_sampled_from.c  test_text.c
